k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: webui
  name: webui
spec:
  ports:
  - name: "8008"
    port: 8008
    targetPort: 80
  selector:
    io.kompose.service: webui
  type: ClusterIP
status:
  loadBalancer: {}
